# statgpt-backend

./: .env.template  .flake8  .gitignore  .ort.yml  .pre-commit-config.yaml  CODE_STYLE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: cleanup-untagged-images.yml  deploy-development.yml  pr.yml  release.yml  test.yml
docker/: Dockerfile.admin  Dockerfile.chat  admin.Dockerfile  chat.Dockerfile
scripts/: admin.sh
src/: alembic.ini
src/admin_portal/: README.md  app.py
src/admin_portal/alembic/: env.py
src/admin_portal/alembic/versions/: 2024_04_10_1123-692702273151_add_tables_to_store_channels.py  2024_04_10_1126-be6a6d78fb51_add_tables_to_store_data_sources.py  2024_04_10_1426-7f1495276259_remove_llm_models_table.py  2024_04_11_1350-bee4454de35e_add_datasets_table.py  2024_04_12_1848-dfed193d441c_add_description_to_datasets_table.py  2024_04_15_1323-26d45d144edd_add_channel_datasets_table.py  2024_05_20_1502-9516b91426b5_update_enum.py  2024_05_20_1634-ec74743d00c7_add_status_to_dataset_table.py  2024_05_23_1544-a9ae14b08343_remove_name_and_description_from_.py  2024_05_24_1737-78b05c24c076_create_collection_names_table.py  2024_05_27_1805-9c86e3f19f2c_migrate_collections.py  2024_05_30_1603-ab73a3a7de72_remove_loadmode_from_json.py  2024_05_31_1450-7d5f221575d7_add_new_status.py  2024_06_05_1128-1981d81ad692_add_datasetcitation.py  2024_10_29_1641-dd4eca09ec3f_add_jobs_table.py  2025_02_11_1401-6434c19ab7a9_add_supreme_agent_config.py  2025_02_15_0927-c5faf155dafe_add_supreme_agent_language_config.py  2025_02_26_1705-20072b7c9bf3_add_glossary_term_model.py  2025_03_03_1643-d38b203dbe62_remove_preprocessing_status_for_datasets.py  2025_04_17_1436-318707f46c84_add_uuid_and_title_to_datasets_table.py  2025_06_23_0328-f6f95fda8420_add_qh_datasource_type.py  2025_09_21_1412-fa6b0a97e522_initial_version.py  2025_09_27_1058-04eca13e7368_add_datasource_types.py
src/admin_portal/auth/: auth_context.py  oidc.py  user.py
src/admin_portal/config/: __init__.py  background.py  import_export.py  oidc_auth.py
src/admin_portal/routers/: __init__.py  channel.py  data_source.py  dataset.py  glossary_of_terms.py
src/admin_portal/services/: __init__.py  background_tasks.py  channel.py  data_source.py  dataset.py  glossary_of_terms.py  import_export_jobs.py
src/admin_portal/settings/: background_tasks.py  exim.py  oidc_auth.py
src/common/: README.md
src/common/auth/: auth_context.py  authorizer.py  base.py  grants.py  msi.py  oauth_token.py  token.py  token_cache.py
src/common/config/: __init__.py  auth.py  database.py  dial.py  document.py  embeddings.py  langchain_config.py  llm_models.py  logging.py  sdmx.py  utils.py  versions.py
src/common/data/: __init__.py  manager.py
src/common/data/base/: __init__.py  attribute.py  base.py  category.py  dataset.py  datasource.py  dimension.py  enums.py  indicator.py  query.py
src/common/data/quanthub/: config.py
src/common/data/sdmx/: __init__.py
src/common/indexer/: __init__.py  cache.py  cache_factory.py  indexer.py  indexer_factory.py  schemas.py  searcher.py
src/common/models/: __init__.py  database.py  health_checker.py  models.py
src/common/prompts/: __init__.py  prompts.py
src/common/prompts/assets/: indexer.yaml
src/common/routers/: memory_debug.py
src/common/schemas/: __init__.py  base.py  channel.py  channel_dataset.py  data_query_tool.py  data_source.py  dataset.py  dial.py  enums.py  glossary_of_terms.py  jobs.py  model_config.py  token_usage.py  tool_details.py  tools.py
src/common/services/: __init__.py  base.py  channel.py  data_preloader.py  data_source.py  dataset.py  glossary_of_terms.py
src/common/settings/: application.py  auth.py  database.py  dataflow_loader.py  dial.py  document.py  elastic.py  hybrid_index.py  langchain.py  logging.py  sdmx.py
src/common/utils/: __init__.py  async_utils.py  cache.py  callbacks.py  db_mixins.py  elastic.py  files.py  interval_processor.py  markdown.py  media_types.py  memory_profiler.py  misc.py  models.py  plotly.py  time_utils.py  timer.py  token_usage_context.py  token_usage_utils.py  value_tools.py
src/common/utils/dial/: __init__.py  attachments.py  core.py  model_pricing.py
src/common/vectorstore/: __init__.py  base.py  document.py  embeddings.py  factory.py
src/common/vectorstore/pg_vector_store/: __init__.py  models.py  pg_vector_store.py  (+1 more)
src/statgpt/: README.md  app.py
src/statgpt/application/: app_factory.py  application.py  channel_completion.py  service_endpoints.py  session_dependency.py
src/statgpt/chains/: __init__.py  available_datasets.py  available_publications.py  candidates_selection_batched.py  candidates_selection_mapping.py  candidates_selection_simple.py  chain_factory.py  glossary_tools.py  main.py  out_of_scope_checker.py  parameters.py  plain_content_tool.py  ram.py  supreme_agent.py  tools.py
src/statgpt/config/: __init__.py  application.py  chain_parameters.py  dial_app.py  dial_rag.py  state.py  vector_search_config.py
src/statgpt/default_prompts/: __init__.py  prompts.py
src/statgpt/schemas/: __init__.py  dial_app_configuration.py  query_builder.py  selection_candidates.py  service.py  state.py  tool_artifact.py  tool_states.py
src/statgpt/security/: __init__.py  auth_context.py
src/statgpt/services/: __init__.py  chat_facade.py
src/statgpt/settings/: application.py  dial_app.py  dial_rag.py
src/statgpt/utils/: __init__.py  callbacks.py  dataframe.py  dataset_formatter.py  dial.py  dial_stages.py  dial_tools.py  gc_debug.py  hierarchies.py  llm.py  message_history.py  openai_to_dial_streamer.py  request_context.py  time_utils.py  tools.py
tests/: conftest.py
tests/integration/services/: conftest.py  mocks.py  test_channels.py  test_data_sources.py  test_sdmx_datasets.py
tests/unit/: test_commands_interceptor.py  test_interval_processor.py  test_queries.py  test_semantic_chain.py  test_utils.py
tests/unit/eval/: test_data_query_checker.py  test_data_query_states_merge.py
(+141 files in other folders)
